Optimize image size (~700MB to ~260MB) with multi build Dockerfile